09-Jun-2015 Laurent Duflot
	* FilterUpdateMerge.py: update for Run 2 stream; few protections added
	* launch_jobs_on_grid.py: add --noGRL option, add p2363 support,
	further reduction of the output dataset length

08-Jun-2015 Laurent Duflot
	* launch_jobs_on_grid.py: add p2363

08-Jun-2015 Laurent Duflot
	* ZeroLeptonRunPeriod, ZeroLeptonSR: add p2363
	* rel20: switch to SUSYTools-00-06-09
	* tagged as ZeroLeptonRun2-00-00-38

05-Jun-2015 Laurent Duflot
	* PhysObjProxyUtils + CR: change energies to GeV in the *mini-tuple*
	(the rest of the code still use MeV !) razor variables unchanged.
	* ZeroLeptonRunPeriod, SR: change p2352 (skim) to p2353 (no skim)
	* README, config files, python scripts: make mc15/data15 the default
	* tagged as ZeroLeptonRun2-00-00-37

05-Jun-2015 Laurent Duflot
	* ZeroLeptonNTVars, PhysObjProxyUtils: add tau pT, eta, phi
	* PhysObjProxies, BuildSUSYObjects: add isBad to muons
	* SR+CR : remove cleaning cuts and fill 'cleaning' variable with decision
	* tagged as ZeroLeptonRun2-00-00-36

04-Jun-2015 Laurent Duflot
	* ZeroLeptonNTVars, PhysObjProxies, PhysObjProxyFiller,
	PhysObjProxyUtils, BuildSUSYObjects, ZeroLeptonSR, LinkDef.h: add taus
	* SR, CR, PhysObjProxies, PhysObjProxyUtils: code cleanup

03-Jun-2015 Laurent Duflot
	* GRLProcessor: add a passAll option
	* ZeroLeptonSR: no MET_HadTopo for p2352
	* ZeroLeptonRunPeriod: add p2352

29-May-2015 Laurent Duflot
	* getMCInfo.py, FilterUpdateMerge.py: add mc15_13TeV

28-May-2015 Laurent Duflot
	* FilterUpdateMerge: merge also the CRWT, CRZ and CRY blocks

28-May-2015 Laurent Duflot
	* makeDatasetList.py: add mc15_13TeV
	* mc15_13TeV_MCSampleList.py: updated list of samples
	* tagged as ZeroLeptonRun2-00-00-35

27-May-2015 Laurent Duflot
	* ZeroLeptonUtils, SR & CR: use recomputed MET e.g. for neg E cell veto
	* BuildSUSYObjects, ZeroLeptonDataDrivenQCD: rename recomputed MET
	to MET_ZL (avoid RefFinal as this is not the MET for rel20/mc15)

26-May-2015 Laurent Duflot