@@ -216,6 +216,8 @@ if __name__ == '__main__':
         import mc14_13TeV_MCSampleList as MCSampleList
     elif config.prefix == 'mc15_13TeV':
         import mc15_13TeV_MCSampleList as MCSampleList
+    elif config.prefix == 'mc15_week1':
+        import mc15_13TeV_week1_MCSampleList as MCSampleList
     else:
         print 'Unsupported mc production type',config.prefix
         sys.exit(1)
