@@ -2,6 +2,9 @@
 	* FilterUpdateMerge.py: update for Run 2 stream; few protections added
 	* launch_jobs_on_grid.py: add --noGRL option, add p2363 support,
 	further reduction of the output dataset length
+	* FilterUpdateMerge.cxx: add mc15 JZxW samples
+	* FilterUpdateMerge.py, getMCInfo.py, makeDatasetList.py, mc15_13TeV_week1_MCSampleList.py: add support for mc15
+	"week1" samples
 
 08-Jun-2015 Laurent Duflot
 	* launch_jobs_on_grid.py: add p2363
